src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Identity_Provider__c</fullName>
        <label>Identity Provider</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QR_Code__c</fullName>
        <label>QR Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>access_token__c</fullName>
        <label>access token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token_secret__c</fullName>
        <description>Needed for OAuth 1 implementations</description>
        <label>token secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>